# acm-prodigy

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  translations.json
.github/workflows/: build.yml
config/: settings.py  urls.py
main/: admin.py  forms.py  mixins.py  models.py  services.py  urls.py  utils.py  views.py
main/management/commands/: dump_translations.py  init_config.py  load_translations.py
main/migrations/: 0001_initial.py  0002_acceptedsolution.py
nginx/: nginx.conf
parser/: database.py  parser.py  solutions.db
static/assets/css/: auth.css  button.css  commands.css  createForm.css  fonts.css  footer.css  global.css  header.css  personalAcc.css  restrictions.css  style.css  variables.css
static/assets/js/: cardText.js  championship.js  create-command.js  dropdownClick.js  form-select.js  forms.js  languageSwitcher.js  mobileMenu.js  navbar.js  scroll.js
templates/: wrapper.html
templates/includes/: footer.html  header.html  sponsors.html
templates/main/: coach.html  common_info.html  index.html  participant.html  rules.html  team_create.html  team_detail.html  team_list.html  verify.html
templates/main/registration/: login.html  signup.html
