[tool.poetry]
name = "acm-prodigy"
version = "1.0.0"
description = "Project for management participants on ICPC-like olympiads"
authors = ["Vladimir Velikovich <vvelikovich@gmail.com>"]
license = "CC-BY-NC-SA 4.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.6"
django-countries = "^7.6.1"
python-json-logger = "^3.2.1"
psycopg2-binary = "^2.9.10"
requests = "^2.32.3"
django-recaptcha = "^4.0.0"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
